--- a/Justice-ui/package.json
+++ b/Justice-ui/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "axios": "^0.21.0",
     "react-scripts": "3.4.1"
   },
   "scripts": {
@@ -31,5 +32,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
